--- a/00_notes/lectures/linked_list.tex
+++ b/00_notes/lectures/linked_list.tex
@@ -158,8 +158,8 @@ class SinglyLinkedList:
                 & the last element, and so on. \\
                 \multicolumn{2}{p{\linewidth}}{
                     \begin{itemize} 
-                        \item Find the middle of the list using slow and fast pointers.
-                        \item Reverse the second half of the list.
+                        \item Find middle of list using slow/fast pointers w/ Floyd's algorithm, but have fast start at 2nd node.
+                        \item Reverse the second half of the list using 206. 
                         \item Merge the two halves together.
                     \end{itemize}
                 } \\
