--- a/00_notes/lectures/linked_list.tex
+++ b/00_notes/lectures/linked_list.tex
@@ -154,8 +154,8 @@ class SinglyLinkedList:
                 } \\
                 \midrule
                 143. Reorder List & Given a linked list, reorder it in a specific pattern. \\
-                & Specifically, the pattern is to rearrange the list s.t. the first element is followed by \\
-                & the last element, and so on. \\
+                & Specifically, the pattern is to rearrange the list s.t. \\
+                & the first element is followed by the last element, and so on. \\
                 \multicolumn{2}{p{\linewidth}}{
                     \begin{itemize} 
                         \item Find middle of list using slow/fast pointers w/ Floyd's algorithm, but have fast start at 2nd node.
