--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -58,8 +58,8 @@
 \input{lectures/images.tex}
 \newpage
 
-% \section{Trees}
-% \input{lectures/trees.tex}
-% \newpage
+\section{Trees}
+\input{lectures/trees.tex}
+\newpage
 
 \end{document}
