--- a/00_notes/lectures/trees.tex
+++ b/00_notes/lectures/trees.tex
@@ -129,8 +129,23 @@ def inorder(self):
 \newpage
 
 \subsubsection{Common Problems}
-
 \begin{summary}
+    \begin{center}
+        \begin{tabular}{ll}
+            \toprule
+            \textbf{Problem} & \textbf{Description:} \\
+            226. Invert Binary Tree & Given a binary tree, invert it. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item Base case: If the node is None, return.
+                    \item Swap left and right children of the current node.
+                    \item Recursively call the function on left and right children.
+                \end{itemize}
+            } \\
+            \midrule
+            \bottomrule
+        \end{tabular}
+    \end{center}
 \end{summary}
 
 \newpage
