--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -62,4 +62,8 @@
 \input{lectures/trees.tex}
 \newpage
 
+\section{Heaps and Priority Queues}
+\input{lectures/heap_pq.tex}
+\newpage
+
 \end{document}
