--- a/00_notes/lectures/heap_pq.tex
+++ b/00_notes/lectures/heap_pq.tex
@@ -195,6 +195,14 @@ class MinHeap:
                     \end{itemize}
                 } \\
             \midrule
+            215. Kth Largest Element in an Array & Find the kth largest element in an unsorted array. \\
+            \multicolumn{2}{p{\linewidth}}{
+                    \begin{itemize}
+                        \item Use a min-heap to keep track of the k largest elements.
+                        \item If the heap size exceeds k, pop the smallest element.
+                        \item Return the root of the heap.
+                    \end{itemize}
+                } \\
         \end{tabular}
     \end{center}
 \end{summary}
