--- a/00_notes/lectures/0_general.tex
+++ b/00_notes/lectures/0_general.tex
@@ -82,6 +82,14 @@
             \end{itemize}
             \item \texttt{reverse=...}: A boolean value. If \texttt{True}, sorted in descending order; otherwise, sorted in ascending order (default is \texttt{False}).
         \end{itemize}
+        \item \texttt{collections.Counter(iterable)}
+        \begin{itemize}
+            \item Counts the frequency of each unique element in \texttt{iterable} and returns a dictionary-like object.
+            \item \textbf{Arguments:}
+            \begin{itemize}
+                \item \texttt{iterable}: a sequence (e.g., list, string) or any iterable containing hashable elements.
+            \end{itemize}
+        \end{itemize}
     \end{enumerate}
 
 \end{summary}
