--- a/00_notes/lectures/4_binary_search.tex
+++ b/00_notes/lectures/4_binary_search.tex
@@ -64,6 +64,20 @@ def binary_search(nums, target):
                     \end{itemize}
                 \end{itemize}
             } \\
+            \midrule 
+            153. Find Minimum in Rotated Sorted Array & Given a rotated sorted array, find the minimum element. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item Store res. 
+                    \item Initialize l = 0, r = len(nums) - 1.
+                    \item While l <= r:
+                    \begin{itemize}
+                        \item If nums[l] < nums[r], res = min(res, nums[l]) and break. This means the array is not rotated.
+                        \item Else, get the mid and update res = min(res, nums[mid]). If nums[mid] >= nums[l], update l = mid + 1 (i.e. min is in the right half). Else, update r = mid - 1 (i.e. min is in the left half).
+                    \end{itemize}
+                \end{itemize}
+            } \\
+            \midrule
             \bottomrule
         \end{tabular}
     \end{center}
