--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -66,4 +66,12 @@
 \input{lectures/heap_pq.tex}
 \newpage
 
+\section{Graphs}
+\input{lectures/graphs.tex}
+\newpage
+
+\section{Backtracking}
+\input{lectures/backtracking.tex}
+\newpage
+
 \end{document}
