--- a/00_notes/lectures/trees.tex
+++ b/00_notes/lectures/trees.tex
@@ -41,6 +41,11 @@ class BST:
         \begin{itemize}
             \item Useful for deleting or freeing nodes in memory.
         \end{itemize}
+        \item \textbf{Level-order (BFS)}: Visit nodes level by level from top to bottom and left to right.
+        \begin{itemize}
+            \item Uses a queue to traverse nodes level by level.
+            \item Useful for finding shortest paths or visualizing layers of a tree.
+        \end{itemize}
     \end{itemize}
 \end{definition}
 
