--- a/00_notes/lectures/trees.tex
+++ b/00_notes/lectures/trees.tex
@@ -54,6 +54,7 @@ class BST:
     \end{center}
 \end{summary}
 
+\subsubsection{Search}
 \begin{algo}
 \begin{lstlisting}
 def search(self, key):
@@ -69,6 +70,7 @@ def search(self, key):
 \end{lstlisting}
 \end{algo}
 
+\subsubsection{Insert}
 \begin{algo}
 \begin{lstlisting}
 def insert(self, key):
@@ -84,6 +86,7 @@ def insert(self, key):
 \end{lstlisting}
 \end{algo}
 
+\subsubsection{Delete}
 \begin{algo}
 \begin{lstlisting}
 def delete(self, key):
