--- a/00_notes/lectures/graphs.tex
+++ b/00_notes/lectures/graphs.tex
@@ -1,3 +1,18 @@
+\begin{summary}
+    \begin{center}
+        \begin{tabular}{lll}
+            \toprule
+            \textbf{Algorithm} & \textbf{Time Complexity} & \textbf{Space Complexity} \\
+            \midrule
+            BFS & $O(V + E)$ & $O(V)$ \\
+            \midrule
+            DFS & $O(V + E)$ & $O(V)$ \\
+            \midrule
+            Topological Sort (DFS) & $O(V + E)$ & $O(V)$ \\
+        \end{tabular}
+    \end{center}
+\end{summary}
+
 \subsection{Breadth-First Search (BFS)}
 \begin{summary}
     \begin{itemize}
@@ -112,3 +127,51 @@ def dfs(node, visited):
         \end{tabular}
     \end{center}
 \end{summary}
+\newpage
+
+\subsection{Topological Sort}
+\begin{summary}
+    \begin{itemize}
+        \item Use when processing nodes in a directed acyclic graph (DAG) in a linear order.
+        \item Ideal for scheduling tasks, resolving dependencies, or ordering items.
+        \item Can be implemented using DFS or Kahn's algorithm (BFS).
+        \item Maintain an in-degree count for each node to identify nodes with no dependencies.
+        \item Use a queue to process nodes with zero in-degrees and update the in-degrees of their neighbors.
+        \item Continue until all nodes are processed or a cycle is detected.
+    \end{itemize}
+\end{summary}
+
+\begin{algo}
+\begin{lstlisting}
+from collections import defaultdict, deque
+
+def topological_sort(num_nodes, edges):
+    # Build adjacency list and in-degree count
+    graph = defaultdict(list)
+    in_degree = [0] * num_nodes
+
+    for u, v in edges:
+        graph[u].append(v)
+        in_degree[v] += 1
+
+    # Start with all nodes that have in-degree 0
+    queue = deque([i for i in range(num_nodes) if in_degree[i] == 0])
+    topo_order = []
+
+    while queue:
+        node = queue.popleft()
+        topo_order.append(node)
+
+        for neighbor in graph[node]:
+            in_degree[neighbor] -= 1
+            if in_degree[neighbor] == 0:
+                queue.append(neighbor)
+
+    # If not all nodes are processed, there is a cycle
+    if len(topo_order) != num_nodes:
+        return []  # or raise an error
+
+    return topo_order
+\end{lstlisting}
+        
+\end{algo}
